--- a/mbmservice/AndroidManifest.xml
+++ b/mbmservice/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     android:installLocation="internalOnly"
     package="com.mbm.mbmservice"
-    android:versionCode="3"
-    android:versionName="4.0.0.0-alpha"
+    android:versionCode="4"
+    android:versionName="4.0.0.0-beta"
     android:sharedUserId="android.uid.phone" >
 
     <uses-sdk android:minSdkVersion="9" />
